--- a/index.html
+++ b/index.html
@@ -50,28 +50,6 @@
               </div>
             </div> -->
             <!-- end of meal item -->
-            <!-- meal item -->
-            <!-- <div class="meal-item">
-              <div class="meal-img">
-                <img src="pasta.jpg" alt="pasta" />
-              </div>
-              <div class="meal-name">
-                <h3>Italian Pasta</h3>
-                <a href="#" class="recipe-btn">Get Recipe</a>
-              </div>
-            </div> -->
-            <!-- end of meal item -->
-            <!-- meal item -->
-            <!-- <div class="meal-item">
-              <div class="meal-img">
-                <img src="pasta.jpg" alt="pasta" />
-              </div>
-              <div class="meal-name">
-                <h3>Italian Pasta</h3>
-                <a href="#" class="recipe-btn">Get Recipe</a>
-              </div>
-            </div> -->
-            <!-- end of meal item -->
           </div>
         </div>
 
@@ -79,16 +57,16 @@
           <button
             type="button"
             class="btn recipe-close-btn"
-            id=" recipe-close-btn"
+            id="recipe-close-btn"
           >
             <i class="fas fa-times"></i>
           </button>
           <!-- meal content -->
           <div class="meal-details-content">
-            <h2 class="recipe-title">Meals Name Here</h2>
+            <!-- <h2 class="recipe-title">Meals Name Here</h2>
             <p class="recipe-category">Category Name</p>
             <div class="recipe-instruct">
-              <h3>Instructions</h3>
+              <h3>Instructions:</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Doloremque tempora veritatis facilis, eligendi amet dolores
@@ -100,7 +78,7 @@
             </div>
             <div class="recipe-link">
               <a href="#" target="_blank">Watch Video</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
